--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.6.3
+  provider: ^4.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
